GNOME Bugzilla – Bug 695982
Fix transition-z property setting
Last modified: 2013-03-18 10:39:11 UTC
Obvious copypasta :)
Created attachment 239051 [details] [review] patch v1
Review of attachment 239051 [details] [review]: obviously correct. please, push to master and cherry-pick in clutter-1.14.
Pushed to both.