actor: fix translation-z setting

https://bugzilla.gnome.org/show_bug.cgi?id=695982